--- a/Task4/css/style.css
+++ b/Task4/css/style.css
@@ -2,22 +2,22 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url(/Task4/fonts/Roboto-Regular.ttf) format('truetype');
+    src: url(../fonts/Roboto-Regular.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Roboto-light-italic';
-    src: url(/Task4/fonts/Roboto-LightItalic.ttf) format('truetype');
+    src: url(../fonts/Roboto-LightItalic.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Roboto-extra-bold';
-    src: url(/Task4/fonts/Roboto-Black.ttf) format('truetype');
+    src: url(../fonts/Roboto-Black.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Roboto-thin';
-    src: url(/Task4/fonts/Roboto-Thin.ttf);
+    src: url(../fonts/Roboto-Thin.ttf);
 }
 
 body {
